GS-8461 Correcting header_728x90 ad slot showing extra space in IE on perl pages

--- a/src/webapp/res/css/frame.css
+++ b/src/webapp/res/css/frame.css
@@ -12,6 +12,7 @@ body.cobranded {
 #marginGS {
     width: 100%;
     text-align: center;
+    zoom: 1.0;
 }
 
 #pageGS {
@@ -33,6 +34,7 @@ body.unframed #pageGS {
     margin:0 auto 6px auto;
     padding: 7px 0 0 0;
     text-align: center;
+    zoom: 1.0;
 }
 
 #contentGS {
